# nt-backtester

./: .gitignore  README.md  pyproject.toml
diagnostics/: notebook.py
nt_backtester/: backtest.py  covariance_matrix.py  data.py  portfolio.py
