[project]
name = "nt-backtester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.10.0",
    "cvxpy>=1.7.5",
    "numpy>=2.4.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "ray[default]>=2.53.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "marimo>=0.18.4",
    "pyzmq>=27.1.0",
]
