[project]
name = "nt-backtester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bear-lake>=0.1.5",
    "clickhouse-connect>=0.10.0",
    "cvxpy>=1.7.5",
    "marimo>=0.19.4",
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "ray[default]>=2.53.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "marimo>=0.18.4",
    "pyzmq>=27.1.0",
]
